@@ -1,2 +1,2 @@
 #
-__version__ = '2.2.2.dev1'
+__version__ = '2.2.2.dev2'
